# servant-hateoas

./: .gitignore  CHANGELOG.md  LICENSE  README.md  servant-hateoas.cabal  test.json
.github/workflows/: haskell-ci.yml  publish.yml
src/Servant/: Hateoas.hs
src/Servant/Hateoas/: ContentType.hs  Example.hs  HasHandler.hs  HasRelationLink.hs  HasResourceServer.hs  HasTemplateLink.hs  Layer.hs  RelationLink.hs  Resource.hs  ResourceServer.hs  Rewrite.hs  Some.hs
src/Servant/Hateoas/Combinator/: Title.hs
src/Servant/Hateoas/ContentType/: Collection.hs  HAL.hs  HALJSON.hs
src/Servant/Hateoas/Internal/: Polyvariadic.hs  Sym.hs
src/Servant/Hateoas/Layer/: Build.hs  Merge.hs  Type.hs
test/: Main.hs
test/Servant/Hateoas/: Example.hs  ExampleSpec.hs
