cabal-version:           3.0
name:                    servant-hateoas
version:                 0.2.2
synopsis:                HATEOAS extension for servant
description:             Create Resource-Representations for your types and make your API HATEOAS-compliant.
  Automatically derive hypermedia-links where possible.
  Currently HAL+JSON and Collection+JSON are the only supported Content-Types.
  The ultimate goal is to generate an entirely HATEOAS-compliant API generically.
homepage:                https://github.com/bruderj15/servant-hateoas
bug-reports:             https://github.com/bruderj15/servant-hateoas/issues
license:                 BSD-3-Clause
license-file:            LICENSE
author:                  Julian Bruder
maintainer:              julian.bruder@outlook.com
copyright:               © 2024 Julian Bruder
category:                Servant, Web, REST, HATEOAS
build-type:              Simple
extra-source-files:      README.md
extra-doc-files:         CHANGELOG.md
tested-with:             GHC == 9.4.8
                       , GHC == 9.6.4
                       , GHC == 9.8.2
                       , GHC == 9.10.1

common warnings
    ghc-options:        -Wall

library
    import:              warnings

    exposed-modules:     Servant.Hateoas
                       , Servant.Hateoas.Rewrite
                       , Servant.Hateoas.Resource
                       , Servant.Hateoas.ContentType.HAL
                       , Servant.Hateoas.ContentType.Collection

    other-modules:       Servant.Hateoas.Example

    build-depends:       base                          >= 4.17.2 && < 5
                       , aeson                         >= 2.2.3  && < 2.3
                       , http-media                    >= 0.8.1  && < 0.9
                       , servant                       >= 0.20.2 && < 0.21
                       , servant-server                >= 0.20.2 && < 0.21
                       , constrained-some              >= 0.1.0  && < 0.2
    hs-source-dirs:      src
    default-language:    GHC2021
    default-extensions:  DataKinds, TypeFamilies

test-suite servant-hateoas-test
    import:              warnings
    default-language:    GHC2021
    type:                exitcode-stdio-1.0
    hs-source-dirs:      test
    main-is:             Main.hs
    build-depends:
                         base >= 4.17.2 && < 5
                       , servant-hateoas
